Rename HOME panels to blocks